# skills-manager

./: .gitignore  ICONS.md  INSTALL.md  README.md  index.html  package-lock.json  package.json  skills-manager.config.json  test-click.html  vite.config.ts
src/: App.tsx  hotTypes.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test.html
src-tauri/icons/: README.md  generate-icon.sh
src-tauri/src/: bin_install.rs  claws.rs  config.rs  file_ops.rs  hot_skills.rs  install.rs  main.rs  models.rs  scan.rs  skill_md.rs  sources.rs  symlink_index.rs
src/components/: AppSidebar.tsx  ConfirmDialog.tsx  HotSkillPlatformBadge.tsx  SkillContextMenu.tsx  SkillDetailModal.tsx  Toast.tsx
src/lib/: clampMenuPosition.ts  hotSkillLocalMatch.test.ts  hotSkillLocalMatch.ts  sourceColors.ts
src/types/: domain.ts
