[package]
name = "skills-manager"
version = "0.1.0"
description = "OpenClaw Skills Manager"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
